@@ -71,6 +71,63 @@
         25        60        0.00011     0.00010455
         30        60        0.00092     0.00092068
 
+  Test: Gamma Function.
+  ---------------------
+
+         x       Gamma(x)
+  -----------------------
+
+       0.1         9.5135
+       0.2         4.5908
+       0.3         2.9916
+       0.4         2.2182
+       0.5         1.7725
+       0.6         1.4892
+       0.7         1.2981
+       0.8         1.1642
+       0.9         1.0686
+         1              1
+       1.1        0.95135
+       1.2        0.91817
+       1.3        0.89747
+       1.4        0.88726
+       1.5        0.88623
+       1.6        0.89352
+       1.7        0.90864
+       1.8        0.93138
+       1.9        0.96177
+         2              1
+       2.1         1.0465
+       2.2         1.1018
+       2.3         1.1667
+       2.4         1.2422
+       2.5         1.3293
+       2.6         1.4296
+       2.7         1.5447
+       2.8         1.6765
+       2.9         1.8274
+         3              2
+       3.1         2.1976
+       3.2          2.424
+       3.3         2.6834
+       3.4         2.9812
+       3.5         3.3234
+       3.6          3.717
+       3.7         4.1707
+       3.8         4.6942
+       3.9         5.2993
+         4              6
+       4.1         6.8126
+       4.2         7.7567
+       4.3         8.8553
+       4.4         10.136
+       4.5         11.632
+       4.6         13.381
+       4.7         15.431
+       4.8         17.838
+       4.9         20.667
+         5             24
+
   Test: Spline class.
   -------------------
 
